test/should-fail/deprecate.f3
/**
 * Ensure that deprecated keywords are errored out correctly for V1 release
 * @test/compile-error
 */

attribute fred :Integer;
private var jim;
private attribute john : Integer = 99

